# torch.mbt

./: .gitignore  .moonbit-version  README.md  moon.mod.json  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt
test/mnist/: .gitignore  Makefile  README.md  canvas.mbt  canvas.mjs  import.mjs  mnist-card.mjs  mnist-gallery.mjs  mnist-image.mjs  moon.mod.json  package.json  pnpm-lock.yaml  pyproject.toml  serve.json  tsconfig.json  worker.mjs
test/mnist/cli/: .gitignore  Makefile  index.ts  moon.mod.json  pyproject.toml
test/mnist/cli/ffi/: top.mbt
test/mnist/cli/mnist/: __init__.py
test/mnist/cli/wit/: mnist.wit
test/mnist/scripts/: build.py  compile.py  download.py  generate-bindings.py
test/mnist/src/: infer.mbt  le-net-5-relu.mbt  le-net-5.mbt  main.wasm-gc.mbt  model.mbt  moon.pkg.json  simard.mbt  train.mbt
test/mnist/src/ffi/: moon.pkg.json  top.wasm-gc.mbt  top.wasm.mbt
test/mnist/src/refer/: main.mbt  moon.pkg.json
test/mnist/src/train/: main.mbt  main.wasm-gc.mbt  moon.pkg.json
test/mnist/src/wasi/: ffi.mbt  (+2 more)
test/mnist/web/: .gitignore  Makefile  README.md  index.d.ts  index.html  index.ts  mnist-canvas.html  mnist-canvas.mjs  mnist-canvas.ts  mnist-card.html  mnist-card.ts  mnist-chart.html  mnist-chart.mjs  mnist-chart.ts  mnist-database.ts  mnist-gallery.ts  mnist-image.mjs  mnist-image.ts  mnist-trainer.html  mnist-trainer.mjs  mnist-trainer.ts  mnist-worker.ts  mnist.worker.ts  moon.mod.json  package.json  pnpm-lock.yaml  serve.json  template.d.ts  tsconfig.json  vite.config.ts  web-component.ts
test/mnist/wit/: mnist.wit
(+404 files in other folders)
