[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "torch.mbt"
version = "0.2.5"
dependencies = ["torch"]
requires-python = ">= 3.11"

[project.optional-dependencies]
dev = [
  "black",
  "pytest",
  "syrupy"
]

[tool.setuptools.packages.find]
where = ["src"]
