[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mnist.mbt"
version = "0.2.5"
dependencies = [
  "torch",
  "wasmtime",
  "requests"
]
requires-python = ">= 3.11"

[project.optional-dependencies]
dev = [
  "black",
  "tensorboard"
]

[project.scripts]
train = "mnist.train:main"

[tool.setuptools.packages.find]
where = ["cli"]
